# sasql

./: .gitignore  CREDO.md  Cargo.toml  README.md  SPEC.md
.bsql/queries/: .generation  .manifest  02aea398260e36dc.bitcode  050c94b91ac2a92b.bitcode  059587840fcdf023.bitcode  07446b0936ca4a20.bitcode  08ac222dfe40d7bd.bitcode  08d5f09c74af1e46.bitcode  08fdbb3e29dbd438.bitcode  097f353beda95075.bitcode  0aaa970ac92e4f28.bitcode  0ac785ac20057f62.bitcode  0cb3d0d1199784c0.bitcode  0ce104de966b3433.bitcode  0ce206c074991ce9.bitcode  0d0e4d1bc2498d75.bitcode  0e4f0e82b6458841.bitcode  0f053bc55252ea57.bitcode  103b01c183e964b5.bitcode  124261d33eaede28.bitcode  12c13285c18e916d.bitcode  12efd66d21b695fa.bitcode  13540110645df71a.bitcode  136718c2a32bec3c.bitcode  1368003948c86a59.bitcode  162a9d3078ae900a.bitcode  16a2ca39aac77111.bitcode  180a93a2c1b2e505.bitcode  1850ac6aaf8201a0.bitcode  194012780ae219d8.bitcode  1a7b632f229bad3e.bitcode  1af43859044f1d14.bitcode  1ca7b47e7d187e4a.bitcode  1e68bec1578c3f06.bitcode  1ed02c0b2618e4e5.bitcode  202b73e2086c6fd6.bitcode  2155e8836eec09d8.bitcode  2209d32e85f91d94.bitcode  220c24e73dd2d248.bitcode  2287514ade5e073c.bitcode  (+200 more)
.claude/projects/-Users-smir-ant-Code-sasql/memory/: feedback_fix_bugs_immediately.md
.github/workflows/: ci.yml  publish.yml
bench/: Cargo.toml  README.md  run_pg.sh
bench/.cargo/: config.toml
bench/benches/: pg_complex.rs  pg_fetch_many.rs  pg_fetch_one.rs  pg_insert.rs  sqlite_complex.rs  sqlite_fetch_many.rs  sqlite_fetch_one.rs  sqlite_insert.rs
bench/c/: pg_bench.c
bench/go/pg/: main.go
bench/go/sqlite/: main.go
bench/mem/: bench_bsql_perf.rs  bench_diesel_perf.rs  bench_sqlx_perf.rs  bsql_pg.rs  diesel_pg.rs  run_all.sh  sqlx_pg.rs
bench/src/: lib.rs
bsql/: Cargo.toml
bsql-core/: Cargo.toml
crates/bsql/: Cargo.toml
crates/bsql-arena/: Cargo.toml
crates/bsql-arena/src/: lib.rs
crates/bsql-cli/: Cargo.toml
crates/bsql-cli/src/: cache.rs  integrity.rs  main.rs  migrate.rs  verify.rs
crates/bsql-core/: Cargo.toml
crates/bsql-core/src/: error.rs  executor.rs  lib.rs  listener.rs  pool.rs  singleflight.rs  sqlite_pool.rs  stream.rs  test_support.rs  transaction.rs  types.rs
crates/bsql-driver/: Cargo.toml
crates/bsql-driver-postgres/: Cargo.toml
crates/bsql-driver-postgres/src/: arena.rs  async_conn.rs  auth.rs  codec.rs  conn.rs  lib.rs  pool.rs  proto.rs  stmt_cache.rs  sync_conn.rs  tls.rs  tls_common.rs  tls_sync.rs  types.rs
crates/bsql-driver-postgres/tests/: integration.rs
crates/bsql-driver-sqlite/: Cargo.toml
crates/bsql-driver-sqlite/src/: codec.rs  conn.rs  ffi.rs  lib.rs  pool.rs
crates/bsql-driver/src/: arena.rs  auth.rs  codec.rs  conn.rs  lib.rs  pool.rs  proto.rs  tls.rs
crates/bsql-driver/tests/: integration.rs
crates/bsql-macros/: .gitignore  Cargo.toml
crates/bsql-macros/src/: codegen.rs  codegen_sqlite.rs  connection.rs  dynamic.rs  explain.rs  lib.rs  offline.rs  parse.rs  pg_enum.rs  sort_enum.rs  sql_norm.rs  stmt_name.rs  suggest.rs  types.rs  types_sqlite.rs  validate.rs  validate_sqlite.rs
crates/bsql/src/: lib.rs
crates/bsql/tests/: async_mode.rs  basic.rs  compile_fail.rs  dynamic.rs  listener.rs  read_write_split.rs  singleflight.rs  sqlite_basic.rs  sqlite_query.rs  streaming.rs  transactions.rs  types.rs
crates/bsql/tests/compile_fail/: alter_rejected.rs  alter_rejected.stderr  comment_only.rs  comment_only.stderr  cte_without_dml.rs  cte_without_dml.stderr  ddl_rejected.rs  ddl_rejected.stderr  drop_rejected.rs  drop_rejected.stderr  empty_sql.rs  empty_sql.stderr  grant_rejected.rs  grant_rejected.stderr  invalid_column.rs  invalid_column.stderr  invalid_table.rs  invalid_table.stderr  manual_positional.rs  manual_positional.stderr  multiple_statements.rs  multiple_statements.stderr  optional_nested_brackets.rs  optional_nested_brackets.stderr  optional_non_option_type.rs  optional_non_option_type.stderr  optional_unclosed_bracket.rs  optional_unclosed_bracket.stderr  param_conflicting_types.rs  param_conflicting_types.stderr  param_empty_type.rs  param_empty_type.stderr  param_missing_type.rs  param_missing_type.stderr  sql_injection.rs  sql_injection.stderr  too_many_optional_clauses.rs  too_many_optional_clauses.stderr  truncate_rejected.rs  truncate_rejected.stderr  (+14 more)
crates/bsql/tests/compile_fail_features/: missing_decimal.rs  missing_decimal.stderr  missing_time.rs  missing_time.stderr  missing_uuid.rs  missing_uuid.stderr
examples/: Cargo.toml  README.md  pg_async.rs  pg_basic.rs  pg_batch_insert.rs  pg_dynamic.rs  pg_listener.rs  pg_n_plus_one.rs  pg_query_as.rs  pg_sort_enum.rs  pg_streaming.rs  pg_sync.rs  pg_testing.rs  pg_transactions.rs  sqlite_basic.rs  sqlite_dynamic.rs  sqlite_keyset_pagination.rs  sqlite_query_as.rs
sasql/: Cargo.toml
sasql-core/: Cargo.toml
sasql-core/src/: error.rs  executor.rs  lib.rs  listener.rs  pool.rs  stream.rs  transaction.rs  types.rs
sasql-macros/: Cargo.toml
sasql-macros/src/: codegen.rs  connection.rs  lib.rs  offline.rs  parse.rs  pg_enum.rs  sql_norm.rs  types.rs  validate.rs
sasql/src/: lib.rs
sasql/tests/: basic.rs  dynamic.rs  listener.rs  streaming.rs  transactions.rs  v02_types.rs
sasql/tests/compile_fail/: ddl_rejected.rs  ddl_rejected.stderr  invalid_column.rs  invalid_column.stderr  invalid_table.rs  invalid_table.stderr  manual_positional.rs  manual_positional.stderr  type_mismatch.rs  type_mismatch.stderr
tests/: COVERAGE.md  README.md  compose.yml  docker-compose.yml  setup.sql  sqlite_setup.sh
