[workspace]
resolver = "2"
members = ["crates/bsql", "crates/bsql-core", "crates/bsql-macros"]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smir-ant/bsql"

[workspace.dependencies]
# Runtime
tokio-postgres = { version = "0.7.17", default-features = false }
deadpool-postgres = { version = "0.14.1", default-features = false, features = ["rt_tokio_1"] }
postgres-types = { version = "0.2.13", default-features = false }
tokio = { version = "1", default-features = false }

# Proc-macro
syn = { version = "2.0.117", default-features = false, features = ["full", "parsing", "printing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

# Streaming
futures-core = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1", default-features = false }

# Performance
rapidhash = "4.4.1"

# Serialization (offline cache)
bitcode = { version = "0.6.9", features = ["derive"] }

# Feature-gated type support
time = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", default-features = false }
rust_decimal = { version = "1", default-features = false, features = ["std"] }

# Internal
bsql-core = { path = "crates/bsql-core", version = "0.6.0" }
bsql-macros = { path = "crates/bsql-macros", version = "0.6.0" }

# --- Build profiles ---
# NOTE: these only affect workspace-internal builds (tests, benchmarks).
# When bsql is used as a library, the CONSUMER's Cargo.toml profile applies.

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1   # max LLVM optimization (single codegen unit)
lto = "fat"         # maximum link-time optimization (slower build, best codegen)
opt-level = 3       # maximum speed (not size)
