[workspace]
resolver = "2"
members = ["crates/bsql", "crates/bsql-arena", "crates/bsql-core", "crates/bsql-driver-postgres", "crates/bsql-driver-sqlite", "crates/bsql-macros"]

[workspace.package]
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smir-ant/bsql"

[workspace.dependencies]
# Runtime
tokio = { version = "1", default-features = false }

# Proc-macro
syn = { version = "2.0.117", default-features = false, features = ["full", "parsing", "printing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

# Performance
rapidhash = "4.4.1"

# Serialization (offline cache)
bitcode = { version = "0.6.9", features = ["derive"] }

# TLS
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
webpki-roots = { version = "1.0.6", default-features = false }

# Feature-gated type support
time = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", default-features = false }
rust_decimal = { version = "1", default-features = false, features = ["std"] }

# Proc-macro optimization
smallvec = { version = "1", default-features = false }

# SQLite
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
crossbeam-channel = "0.5"

# Internal
bsql-core = { path = "crates/bsql-core", version = "0.14.0" }
bsql-arena = { path = "crates/bsql-arena", version = "0.14.0" }
bsql-driver-postgres = { path = "crates/bsql-driver-postgres", version = "0.14.0" }
bsql-driver-sqlite = { path = "crates/bsql-driver-sqlite", version = "0.14.0" }
bsql-macros = { path = "crates/bsql-macros", version = "0.14.0" }

# --- Build profiles ---
# NOTE: these only affect workspace-internal builds (tests, benchmarks).
# When bsql is used as a library, the CONSUMER's Cargo.toml profile applies.

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1   # max LLVM optimization (single codegen unit)
lto = "fat"         # maximum link-time optimization (slower build, best codegen)
opt-level = 3       # maximum speed (not size)
