[workspace]
resolver = "2"
members = ["crates/bsql", "crates/bsql-arena", "crates/bsql-cli", "crates/bsql-core", "crates/bsql-driver-postgres", "crates/bsql-driver-sqlite", "crates/bsql-macros"]
exclude = ["bench", "examples", "crates/bsql-driver-postgres/fuzz"]

[workspace.package]
version = "0.24.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smir-ant/bsql"

[workspace.dependencies]
# Proc-macro
syn = { version = "2.0.117", default-features = false, features = ["full", "parsing", "printing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

# Performance
rapidhash = "4.4.1"

# Serialization (offline cache)
bitcode = { version = "0.6.9", features = ["derive"] }

# TLS
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
webpki-roots = { version = "1.0.6", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2", default-features = false, features = ["std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

# Feature-gated type support
time = { version = "0.3.36", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = ">=1.8, <1.22", default-features = false }
rust_decimal = { version = "1", default-features = false, features = ["std"] }

# Logging
log = { version = "0.4", default-features = false }

# Proc-macro optimization
smallvec = { version = "1", default-features = false }

# Async runtime
tokio = { version = "1", default-features = false }

# SQLite  (no "bundled" — bsql-driver-sqlite adds it via its own `bundled` feature)
libsqlite3-sys = { version = "0.30" }
crossbeam-channel = "0.5"

# Internal
bsql-core = { path = "crates/bsql-core", version = "0.24.1" }
bsql-arena = { path = "crates/bsql-arena", version = "0.24.1" }
bsql-driver-postgres = { path = "crates/bsql-driver-postgres", version = "0.24.1" }
bsql-driver-sqlite = { path = "crates/bsql-driver-sqlite", version = "0.24.1" }
bsql-macros = { path = "crates/bsql-macros", version = "0.24.1" }

# --- Build profiles ---
# NOTE: these only affect workspace-internal builds (tests, benchmarks).
# When bsql is used as a library, the CONSUMER's Cargo.toml profile applies.

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1   # max LLVM optimization (single codegen unit)
lto = "fat"         # maximum link-time optimization (slower build, best codegen)
opt-level = 3       # maximum speed (not size)
