[package]
name = "bsql-bench"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "bsql_bench"
path = "src/lib.rs"

[[bench]]
name = "pg_fetch_one"
harness = false

[[bench]]
name = "pg_fetch_many"
harness = false

[[bench]]
name = "pg_insert"
harness = false

[[bench]]
name = "pg_complex"
harness = false

[[bench]]
name = "sqlite_fetch_one"
harness = false

[[bench]]
name = "sqlite_fetch_many"
harness = false

[[bench]]
name = "sqlite_insert"
harness = false

[[bench]]
name = "sqlite_complex"
harness = false

[dependencies]
# bsql (local, with features)
bsql = { path = "../crates/bsql", features = ["time", "uuid", "sqlite"] }
bsql-core = { path = "../crates/bsql-core", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }

# sqlx (PostgreSQL + SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }

# diesel (PostgreSQL + SQLite)
diesel = { version = "2", features = ["postgres", "sqlite"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }
