[package]
name = "bsql-bench"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "bsql_bench"
path = "src/lib.rs"

[[bench]]
name = "pg_fetch_one"
harness = false

[[bench]]
name = "pg_fetch_many"
harness = false

[[bench]]
name = "pg_insert"
harness = false

[[bench]]
name = "pg_complex"
harness = false

[[bench]]
name = "sqlite_fetch_one"
harness = false

[[bench]]
name = "sqlite_fetch_many"
harness = false

[[bench]]
name = "sqlite_insert"
harness = false

[[bench]]
name = "sqlite_complex"
harness = false

[dependencies]
# bsql (local, with features)
bsql = { path = "../crates/bsql", features = ["time", "uuid", "sqlite"] }
bsql-core = { path = "../crates/bsql-core", features = ["sqlite"] }
bsql-driver-postgres = { path = "../crates/bsql-driver-postgres" }
bsql-driver-sqlite = { path = "../crates/bsql-driver-sqlite", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["full"] }

# sqlx (PostgreSQL + SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }

# diesel (PostgreSQL + SQLite)
diesel = { version = "2", features = ["postgres", "sqlite"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Maximum optimization — cross-crate inlining is critical for bsql
# because the hot path spans bsql-driver-sqlite (ffi.rs StmtHandle methods)
# and the benchmark crate (closure in for_each).
[profile.bench]
codegen-units = 1
lto = "fat"
opt-level = 3
