[package]
name = "sasql-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime support for sasql — compile-time safe SQL for Rust"

[dependencies]
tokio-postgres = { workspace = true, features = ["runtime"] }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
