[package]
name = "sasql-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime support for sasql — compile-time safe SQL for Rust"

[features]
default = []
time = ["dep:time", "postgres-types/with-time-0_3"]
chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
uuid = ["dep:uuid", "postgres-types/with-uuid-1"]
decimal = ["dep:rust_decimal", "rust_decimal/db-tokio-postgres"]

[dependencies]
tokio-postgres = { workspace = true, features = ["runtime"] }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
futures-core = { workspace = true }

# Feature-gated type crates (optional)
time = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
