[package]
name = "sasql-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Proc macros for sasql — compile-time safe SQL for Rust"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tokio-postgres = { workspace = true, features = ["runtime"] }
postgres-types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
rapidhash = { workspace = true }
bitcode = { workspace = true }
