[package]
name = "sasql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Safe SQL for Rust — if it compiles, the SQL is correct"

[features]
default = []
time = ["sasql-core/time", "sasql-macros/time"]
chrono = ["sasql-core/chrono", "sasql-macros/chrono"]
uuid = ["sasql-core/uuid", "sasql-macros/uuid"]
decimal = ["sasql-core/decimal", "sasql-macros/decimal"]

[dependencies]
sasql-core = { workspace = true }
sasql-macros = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
trybuild = "1"
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
