[package]
name = "bsql-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime support for bsql — compile-time safe SQL for Rust"

[features]
default = []
time = ["dep:time", "bsql-driver/time"]
chrono = ["dep:chrono", "bsql-driver/chrono"]
uuid = ["dep:uuid", "bsql-driver/uuid"]
decimal = ["dep:rust_decimal", "bsql-driver/decimal"]
tls = ["bsql-driver/tls"]

[dependencies]
bsql-driver = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
rapidhash = { workspace = true }

# Feature-gated type crates (optional)
time = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
