[package]
name = "bsql-driver-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite driver for bsql — direct FFI, arena allocation, dedicated-thread pool"

[dependencies]
bsql-arena = { workspace = true }
libsqlite3-sys = { workspace = true }
rapidhash = { workspace = true }
smallvec = { workspace = true }
