[package]
name = "bsql-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL wire protocol driver for bsql — binary protocol, arena allocation, zero-copy"

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]
time = ["dep:time"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
decimal = ["dep:rust_decimal"]

[dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "sync", "time"] }
rapidhash = { workspace = true }
simdutf8 = { version = "0.1", default-features = false, features = ["std"] }
smallvec = { workspace = true }

# Auth
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
md-5 = { version = "0.10", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std", "os_rng"] }

# TLS (optional)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

# Feature-gated type support (optional)
time = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
