[package]
name = "bsql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe SQL for Rust — if it compiles, the SQL is correct"

[features]
default = []
time = ["bsql-core/time", "bsql-macros/time"]
chrono = ["bsql-core/chrono", "bsql-macros/chrono"]
uuid = ["bsql-core/uuid", "bsql-macros/uuid"]
decimal = ["bsql-core/decimal", "bsql-macros/decimal"]
explain = ["bsql-macros/explain"]
tls = ["bsql-core/tls", "bsql-macros/tls"]
sqlite = ["bsql-core/sqlite", "bsql-macros/sqlite", "dep:bsql-driver-sqlite"]

[dependencies]
bsql-core = { workspace = true }
bsql-macros = { workspace = true }

# SQLite (optional)
bsql-driver-sqlite = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
trybuild = "1"
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
rust_decimal = { workspace = true }
